deploy/k8s/gitlab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-lilangverse
  labels:
    li-langverse.io/cluster: engine
    app.kubernetes.io/part-of: lilangverse-platform
    app.kubernetes.io/name: gitlab
